bridge/base/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: my-python-vue-app
    labels:
        com.docker.compose.project: my-python-vue-app
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: my-python-vue-app
        com.docker.compose.service: frontend
    ports:
        - name: frontend-5173
          port: 5173
          protocol: TCP
          targetPort: frontend-4173
